Lab 4 part 1
